WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43167
SHOULD NEVER BE REACHED assertion when switching tabs with composited content
https://bugs.webkit.org/show_bug.cgi?id=43167
Summary
SHOULD NEVER BE REACHED assertion when switching tabs with composited content
Simon Fraser (smfr)
Reported
2010-07-28 18:17:54 PDT
Created
attachment 62909
[details]
Testcase Load the attached testcase in Safari, switch to another tab, then switch back. You often hit: SHOULD NEVER BE REACHED (RenderLayerBacking.cpp:941 void WebCore::RenderLayerBacking::paintIntoLayer(WebCore::RenderLayer*, WebCore::GraphicsContext*, const WebCore::IntRect&, WebCore::PaintBehavior, WebCore::GraphicsLayerPaintingPhase, WebCore::RenderObject*))
Attachments
Testcase
(623 bytes, text/html)
2010-07-28 18:17 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(1.80 KB, patch)
2010-07-29 11:15 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-07-29 11:04:56 PDT
The issue here is that as the root layer attachment changes, setDrawsContent(true) gets called on the RenderView's compositing layer, which in turn cause a -setNeedsDisplay. That should never happen.
Simon Fraser (smfr)
Comment 2
2010-07-29 11:15:16 PDT
Created
attachment 62970
[details]
Patch
Darin Adler
Comment 3
2010-07-29 11:18:57 PDT
Comment on
attachment 62970
[details]
Patch Can you land a manual test? Just an HTML file with steps to reproduce in it. We do have a directory full of manual tests, although I’m not sure we get maximum value from them.
Simon Fraser (smfr)
Comment 4
2010-07-29 11:43:19 PDT
http://trac.webkit.org/changeset/64296
, including manual test.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug